# trust-link-contract

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MULTI_RESOLVER_SCHEME.md  ORACLE_TRUST_MODEL.md  README.md  TTL_FIX_SUMMARY.md  add_single_payee_import.py  build.sh  docker-compose.yml  fix_create_escrow.ps1  fix_create_escrow_calls.py  fix_tests_safe.ps1  functions.txt  functions_utf8.txt  git_log.txt  log.txt  ls-remote.txt  old_lib.rs  old_lib_utf8.rs  pr.md  reflog.txt  status.txt
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  publish-bindings.yml  security.yml
bindings/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
bindings/dist-test/: abi.d.ts  abi.d.ts.map  abi.js  client.d.ts  client.d.ts.map  client.js  client.test.d.ts  client.test.d.ts.map  client.test.js  errors.d.ts  errors.d.ts.map  errors.js  hooks.d.ts  hooks.d.ts.map  hooks.js  index.d.ts  index.d.ts.map  index.js  simulation.d.ts  simulation.d.ts.map  simulation.js  simulation.test.d.ts  simulation.test.d.ts.map  simulation.test.js  soroban-react.d.ts  soroban-react.d.ts.map  soroban-react.js  types.d.ts  types.d.ts.map  types.js
bindings/scripts/: optimize-wasm.js
bindings/src/: abi.ts  client.test.ts  client.ts  errors.ts  hooks.ts  index.ts  simulation.test.ts  (+3 more)
docs/: FAQ.md  events.md  storage.md
indexer/: README.md  package.json  schema.sql  tsconfig.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+347 files in other folders)
